[tool.poetry]
name = "lift-form-tracker"
version = "0.1.0"
description = "form tracker for lift videos"
authors = ["yujin <yujinjcho@gmail.com>"]
readme = "README.md"
packages = [{include = "lift_form_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
mediapipe = "^0.9.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
